# sun-position

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  solarchart.py  spa.c  sunposition.py  sunposition_test.txt  test_sunposition.py
sunposition/: sunposition.py
tests/: generate_test_data.py  test_data.csv  test_sunposition.py
