[metadata]
name = sunposition
version = attr: sunposition.VERSION
author = Samuel Powell
author_email = samuel.powell@uq.edu.au
description = Compute the sun's observed position based on Reda & Adreas's 2004 paper "Solar position algorithm for solar radiation applications"
long_description = file: README.md, LICENSE
keywords = sun, solar, astronomy
license = MIT
classifiers =
	Programming Language :: Python :: 3

[options]
zip_safe = True
py_modules = sunposition
python_requires = >=3.5
install_requires = 
	numpy

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts =
	sunposition = sunposition:main

[options.extras_require]
JIT = 
	numba