[metadata]
name = sunposition
version = attr: sunposition.VERSION
url = https://github.com/s-bear/sun-position
author = Samuel Powell
author_email = samuel.powell@uq.edu.au
description = Compute the sun's observed position based on Reda & Adreas's 2004 paper "Solar position algorithm for solar radiation applications"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sun, solar, astronomy
license = MIT
classifiers =
	Programming Language :: Python :: 3
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = True
py_modules = sunposition
python_requires = >=3.5
install_requires = 
	numpy

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts =
	sunposition = sunposition:main

[options.extras_require]
JIT = 
	numba